EncodedBarcode wrapper type to encodedbarcodes can be generated multiple times

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 - Replace str/String inside symbologies to use arrays of u8.
   - Maybe use binary literals: 0b10101
 - Return iterators from encode() instead of Vecs
+  - Or return a new object from it and use that so many generators can use the same barcode without each one calling "encode()".
