--- a/TODO
+++ b/TODO
@@ -1,1 +1,2 @@
+- Allow user to set [RGB, Luma], colour and opacity in image generators.
 - Implement simple regex into Parse and remoev valid_chars, valid_length, etc.
