--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-- Allow user to set [RGB, Luma], colour and opacity in image generators.
-  - Work out what [u8; 4] is for in Rgba.
+- Allow user to colour and opacity in image generators.
+- If user doesn't set image color, default to Luma8 instead of Rgba8 to save bytes.
 - Implement simple regex into Parse and remove valid_chars, valid_length, etc.
