--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
-- Tests for color
-- Tests for opacity
-- Update docs to mention correct fields for image generator
+- Impl Default for Image variants.
+- Fix monstrosity in place_pixels in image generator.
 - If user doesn't set image color, default to Luma8 instead of Rgba8 to save bytes.
 - Allow setting color and opacity in SVG
 - Implement simple regex into Parse and remove valid_chars, valid_length, etc.
