Require height in SVG constructor, updated CHANGELOG for 0.8.1

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
-- Impl Default for Image variants.
-- Fix monstrosity in place_pixels in image generator.
-- If user doesn't set image color, default to Luma8 instead of Rgba8 to save bytes.
-- Allow setting color and opacity in SVG
-- Implement simple regex into Parse and remove valid_chars, valid_length, etc.
+- DOCS: Update docs for SVG constructor when releasing 0.8.1
+- REFACTOR: Impl Default for Image variants.
+- REFACTOR: Fix monstrosity in place_pixels in image generator.
+- PERFORMANCE: If user doesn't set image color, default to Luma8 instead of Rgba8 to save bytes.
+- FEATURE: Allow setting color and opacity in SVG.
+- REFACTOR: Implement simple regex into Parse and remove valid_chars, valid_length, etc.
