--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 - REFACTOR: Remove qualifiers from namespaced constants: CODE39_CHARS -> CHARS.
-- FEATURE: Code93 encoder.
+- PERFORMANCE: If checksum_char functions were private, it would allow for them to return the encoding instead of the char and thus the extra lookup to char_encoding would be able to be skipped (see Code39, etc)
 - REFACTOR: Fix monstrosity in place_pixels in image generator. (Potentially write a simple macro?)
 - PERFORMANCE: If user doesn't set image color, default to Luma8 instead of Rgba8 to save bytes.
 - REFACTOR: Implement simple regex into Parse and remove valid_chars, valid_length, etc.
